--- a/render.yaml
+++ b/render.yaml
@@ -8,4 +8,5 @@ services:
     envVars:
       - key: BOT_TOKEN
         fromDatabase: false
-        value: "<YOUR_BOT_TOKEN_HERE>"
+        value: "<8083828200:AAE9RY4TW2BAUJqdJF1KLXpzK_-7V8aULSY>"
+    pythonVersion: 3.11
