--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,9 @@ services:
     plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
-    pythonVersion: 3.11   # <- specify Python 3.11 here
+    pythonVersion: 3.11
     envVars:
       - key: BOT_TOKEN
         fromDatabase: false
         value: "<YOUR_BOT_TOKEN_HERE>"
+
